Added text section and footer

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,7 +1,12 @@
-.logo{
+.footer{
   height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #001100;
+}
+
+.footer h1{
+  color: white;
 }
