--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,17 @@ body{
   margin: 0;
   font-family: 'futter_betamedium';
 }
+
+.horizontalScroller{
+  height: calc(200vw + 100vh);
+}
+
+.horizontalSectionWrapper{
+  position: sticky;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+}
