Update Alex Greulich

--- a/src/components/text.module.css
+++ b/src/components/text.module.css
@@ -1,6 +1,6 @@
 .textSection{
   box-sizing: border-box;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: flex-start;
