--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,9 +1,15 @@
 .wrapper {
-  color: blue;
+  min-width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FEFEFE;
 }
 
 .card {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 80vw;
