Fuck up hot mess

--- a/src/components/scrollerHorizontal.module.css
+++ b/src/components/scrollerHorizontal.module.css
@@ -1,13 +1,9 @@
 .horizontalScroller {
-  height: calc(200vw + 100vh);
+  overflow: auto; /* fuck you position: sticky, may  you be  damned */
 }
 
 .horizontalSectionWrapper {
-  position: sticky;
-  top: 0;
-  width: 100vw;
   height: 100vh;
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
+  top: 0;
+  display: inline-flex;
 }
