--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -22,6 +22,7 @@
   -webkit-box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.3);
   -moz-box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.3);
   box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.3);
+  cursor: pointer;
 }
 
 .navigation li:hover{
