--- a/src/components/WorkedWith/WorkedWith.module.css
+++ b/src/components/WorkedWith/WorkedWith.module.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
 }
 
+.filterBar{
+}
+
 .filterBar li{
   display: inline-block;
   margin-right: 10px;
@@ -15,4 +18,17 @@
 .filterBar li:hover{
   text-decoration: none;
   color: black;
+}
+
+.references li{
+  display: inline-block;
+  margin-right: 10px;
+  color: grey;
+  cursor: pointer;
+  font-size: 50px;
+  color: black;
+}
+
+.references .inactive{
+  color: gray;
 }
