--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,5 +1,4 @@
 .wrapper {
-  min-width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -8,7 +7,6 @@
 }
 
 .card {
-  width: calc(100vw - 20vh);
   height: 80vh;
 }
 
@@ -16,4 +14,8 @@ h2{
   display: inline-block;
   line-height: 40px;
   border-bottom: 3px solid black;
+}
+
+img{
+  height: 100%;
 }
