--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,12 +1,16 @@
 .footer{
   height: 100vh;
   width: 100vw;
+  background-color: #001100;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #001100;
 }
 
 .footer h1{
+  font-size: 50vh;
+  line-height: 100vh;
   color: white;
+  margin: 0;
+  padding:0;
 }
